# aewbf

./: Makefile.am  aewbf_sig.files  aewbf_sig.includes  configure.ac  copy  copy1  copy3  get  get3
include/: aewbf_sig.h  af_sig.h  alg_motionDetect.h  awb_sig.h
include/aewb/: TI_aewb.h  ae_appro.h  aewb_xdm.h  alg.h  alg_aewb.h  alg_aewb_priv.h  alg_ti_aewb_priv.h  alg_vnf.h  awb_appro.h  csl_buf.h  csl_ccdc.h  csl_gpio.h  csl_ipipeif.h  csl_ldc.h  csl_rsz.h  csl_soc.h  csl_vpss.h  drv.h  drv_capture.h  drv_h3a.h  drv_imgs.h  drv_ipipe.h  drv_isif.h  drv_pwm.h  iae.h  iaewb.h  iawb.h  imageTune.h  imageTuneCmdHandler.h  imageTuneParams.h  imageTunePriv.h  osa.h  osa_buf.h  osa_debug.h  osa_mutex.h  osa_prf.h  osa_que.h  osa_thr.h  tistdtypes.h
include/xdc/ti/targets/: std.h
src/: Makefile  Makefile.am  aewbf_control.c  aewbf_sig.c  alg_aewb.c  alg_aewb_control.c  alg_motionDetect.c  gamma.c
