AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/include/aewb
noinst_LTLIBRARIES = libaewbf.la

libaewbf_la_SOURCES =
libaewbf_la_SOURCES += alg_aewb_control.c
libaewbf_la_SOURCES += aewbf_sig.c
libaewbf_la_SOURCES += alg_aewb.c
libaewbf_la_SOURCES += gamma.c
libaewbf_la_SOURCES += aewbf_control.c

#libaewbfinclude_HEADERS =


#libaewbfincludedir = $(includedir)
#noinst_HEADERS =
